Fix whitespace & fix interests section for mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,11 +2,26 @@ body {
     background-color: #f3f3f3;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 1.8px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 :root {
     --line_color : #555555 ;
-    --back_color : #edb4ff  ;
+    --back_color : #b6e4ff  ;
+}
+
+@media screen and (max-width: 467px) {
+    .scrolling-words-container div {
+        text-align: center;
+    }
+    
+    .scrolling-words-box ul li {
+        justify-content: center;
+    }
 }
 
 .about-me-container {
